--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ws2",
-  "version": "0.0.1",
+  "version": "0.0.5",
   "author": "yokota kenji",
   "homepage": "http://yokotakenji.me",
   "description": "web site starter",
@@ -21,13 +21,13 @@
     "gulp-changed": "^1.1.0",
     "gulp-coffee": "^2.2.0",
     "gulp-compass": "^2.0.3",
+    "gulp-concat": "^2.4.3",
     "gulp-notify": "^2.1.0",
     "gulp-pleeease": "^1.1.0",
     "gulp-plumber": "^0.6.6",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.2",
-    "gulp-watch": "^4.1.1",
-    "webpack": "^1.5.3"
+    "gulp-watch": "^4.1.1"
   }
 }
